# ros2

./: KeyFrameTrajectory.txt  run_robot_sim.sh
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: mypublisher.cpp  mysubscriber.cpp  publisher.cpp
src/orbslam_nav_sim/: CMakeLists.txt  Gazebo.yaml  command.txt  package.xml  rename_models_uri.py
src/orbslam_nav_sim/launch/: sim_launch.py
src/orbslam_nav_sim/models/aws_robomaker_residential_AirconditionerA_01/: model.sdf
src/orbslam_nav_sim/rviz/: camera.rviz  urdf.rviz
src/orbslam_nav_sim/urdf/: common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
src/orbslam_nav_sim/worlds/: small_house.world
tmp_src/basic_robot_bringup/: package.xml  setup.cfg  setup.py
tmp_src/basic_robot_bringup/basic_robot_bringup/: lidar_tf_broadcaster.py  lidar_tf_broadcaster_go2.py
tmp_src/basic_robot_bringup/launch/: basic_robot_gazebo.py
tmp_src/basic_robot_bringup/maps/: my_map.pgm  my_map.yaml  turtlebot_map.pgm  turtlebot_map.yaml
tmp_src/basic_robot_bringup/worlds/: lidar.world
tmp_src/basic_robot_description/: CMakeLists.txt  package.xml
tmp_src/basic_robot_description/launch/: display.launch.xml
tmp_src/basic_robot_description/urdf/: VLP-16.urdf.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
tmp_src/my_robot_controller/: package.xml  setup.py
tmp_src/my_robot_controller/launch/: demo.launch.py
tmp_src/my_robot_controller/urdf/: common_properties.xacro  mobile_base.xacro  my_robot.urdf.xacro
(+68 files in other folders)
